@@ -6,6 +6,7 @@ development home at https://github.com/projectestac/agora_nodes
 Changes in progress
 ---------------------------------------------------------------------------------------
 - Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
+- Reactor: Fixed bug with icon in last card (Trello #1187)
 
 
 
